--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 DATABASE_URL=postgresql://anushree_user:airbnb@localhost/Bhoruka_users
+SECRET_KEY = "Bhoruka_users_secret_key"
+ALGORITHM = "HS256"
+ACCESS_TOKEN_EXPIRE_MINUTES = 30
